# copa-hackathon

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  claude_code_prompt.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: confidentiality-guard.yml  deploy-poc.yml  test.yml
archive/web/: next.config.ts  package-lock.json
data/: draft_registry.json  glossary.json
data/artifacts/: anchor-index.json  clause-index.json  connection-trace-bcm-v1-2022__recovery-planning-v1-2021.json  connection-trace-bnm-open-finance-ed-2025__bis-pap168-open-finance.json  connection-trace-bnm-open-finance-ed-2025__bnm-rmit-nov25.json  connection-trace-bnm-open-finance-ed-2025__hkma-open-api-framework-2018.json  connection-trace-open-finance-v1-2025-ed__bcm-v1-2022.json  connection-trace-open-finance-v1-2025-ed__rmit-v1-2023.json  connection-trace-open-finance-v1-2025-ed__rmit-v2-2025.json  connection-trace-opres-v1-2025-draft__open-finance-v1-2025-ed.json  connection-trace-opres-v1-2025-draft__rmit-v2-2025.json  connection-trace-rmit-v1-2023__rmit-v2-2025.json  connection-trace-rmit-v2-2026-draft__outsourcing-v1-2019.json  graph.json  verdicts.json
data/corpus/: README.md  manifest.json
data/mock/: rmit-v2-2026-draft.md
data/references/: README.md  basel-por-2021.md  mas-trm-2021.md  pdpa-2010.md
docs/: interviews.md
docs/adr/: 0001-workflow-state-localstorage-demo.md  0002-graph-viz-react-flow.md  0003-reference-radar-read-path.md  (+2 more)
engine/: anchors.py  anchors_bnm.py  anchors_llm.py  api.py  build.py  clauses.py  concepts.py  config.py  connections.py  copilot.py  copilot_scripts.py  cross_intel.py  directory.py  drafts.py  findings.py  graph.py  ingest.py  linkage_review.py  llm.py  read_model.py  submissions.py  tasks.py  verdicts.py  workstreams.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
kg-poc/: .gitignore  README.md  pyproject.toml
kg-poc/notebooks/: 03_graph_analysis.py
kg-poc/ontology/: classes.yaml  regulatory-profile.yaml  seeds.yaml
kg-poc/pipeline/: analyze.py  chunk.py  corpus.py  extract.py  ingest.py  resolve.py  run.py
kg-poc/tests/: conftest.py  test_analyze.py  test_chunk.py  test_corpus.py  test_extract.py  test_ingest.py  test_ontology.py  test_resolve.py
scripts/: backfill_anchor_citations.py  build_offline_replay_docs.py  enrich_node_metadata.py  export_poc_snapshot.py  export_to_obsidian.py  preanalyse_pair.py  project_cross_workstream_findings.py  run_finder_trace.py
web/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
(+337 files in other folders)
