[project]
name = "engine"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.116.0",
    "azure-ai-inference>=1.0.0b9",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "markitdown[docx,pdf]>=0.1.6",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "uvicorn>=0.50.2",
]
