[project]
name = "engine"
version = "0.1.0"
description = "Workstream Brain — knowledge-graph engine + FastAPI for BNM cross-workstream policy drafting (COPA Hackathon 2026)"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "azure-ai-inference>=1.0.0b9",
    # Server-side sanitizer for the drafting workspace's contentEditable HTML.
    # The frontend also runs DOMPurify, but that is a nicety — anyone can curl
    # the PUT endpoint, so engine/drafts.py is the actual boundary.
    "bleach>=6.4.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "markitdown[az-doc-intel,docx,pdf]>=0.1.6",
    "numpy>=2.0.0",
    "openai>=1.50.0",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "rank-bm25>=0.2.2",
    "uvicorn>=0.50.2",
]
