[project]
name = "kg-poc"
version = "0.1.0"
description = "KG + ontology pipeline POC over BNM policy PDFs"
requires-python = ">=3.11"
dependencies = [
    "spacy>=3.7,<4",
    "gliner>=0.2.13,<0.3",
    "networkx>=3.2,<4",
    "scipy>=1.10",
    "pyvis>=0.3.2,<0.4",
    "markitdown>=0.0.1",
    "azure-ai-documentintelligence>=1.0.0",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "jupytext>=1.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
